style.css
@import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital@1&family=Righteous&family=Roboto&display=swap");

html {
    background-color: #f5f5f1;
    width: 100%;
    overflow-x: hidden;
}

body {
    margin: 0;
}

header > a,
h1 {
    font-family: "Righteous";
    font-size: 5em;
    margin: 0;
    color: #388087;
    user-select: none;
}

h2 {
    font-family: "Roboto";
    font-size: 1.8em;
    margin: 0;
    color: #388087;
}

header {
    padding-top: 30px;
}

#container {
    display: flex;
    width: 100%;
}

.hspacer {
    flex: 0.5;
}

#content {
    width: 60%;
    min-width: 500px;
    padding: 20px 0;
}

a,
a:visited {
    text-decoration: none;
    color: #388087;
    transition: color 0.2s ease-in-out;
}
a:hover {
    text-decoration: none;
    color: #e1a278;
}

tr {
    height: 42px;
}

.article {
    display: flex;
    width: 100%;
    padding-bottom: 10px;
}

.article-date {
    width: 230px;
    font-family: "Courier Prime";
}

.article-name {
    flex: 1;
}
.article-name::first-letter {
    text-transform: capitalize;
}

#articles,
article {
    margin: 0;
    font-size: 1.6em;
    margin-top: 40px;
    font-family: "Roboto";
    color: #6fb3b8;
}

#articles {
    min-height: calc(100vh - 600px);
}

article {
    line-height: 40px;
    padding-bottom: 150px;
}

blockquote {
    border-left: 6px solid #388087;
    padding-left: 1.6em;
}

b {
    color: #388087;
    font-weight: 400;
}

ul {
    list-style: none;
}
ul li::before {
    content: "\2716";
    color: #388087;
    padding-right: 20px;
}

hr {
    border: none;
    border-bottom: 0.2em dotted #e1a278;
    width: 10%;
    min-width: 150px;
    max-width: 500px;
    margin: 50px auto;
}

input[type="text"],
input[type="email"] {
    width: calc(100% - 0px);
    padding: 8px 0;
    margin: 8px 0;
    background-color: #f5f5f1;
    border: none;
    outline: none;
    border-bottom: 3px solid #6fb3b8;
    transition: border 0.2s ease-in-out, color 0.2s ease-in-out;
    color: #6fb3b8;
    font-family: "Roboto";
    font-size: 1.2em;
}

input[type="text"]:focus,
input[type="email"]:focus {
    border-bottom: 3px solid #e1a278;
    color: #e1a278;
}

img,
.youtube {
    max-width: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 40px;
    border: 5px solid #388087;
    padding: 6px;
    border-radius: 5px;
    transition: border-color 0.2s ease-in-out;
}
img:hover,
.youtube:hover {
    border: 5px solid #e1a278;
}

h4 {
    font-family: "Roboto";
    font-size: 0.7em;
    color: #6fb3b8;
    display: block;
    width: 100%;
    text-align: center;
    margin-bottom: 20px;
    margin-top: 10px;
}

footer > p {
    font-size: 1.4em;
    font-family: "Roboto";
    color: #388087;
    margin-bottom: 0;
}

#subscribe {
    display: flex;
    gap: 0.5em;
}

#email {
    flex: 1;
}

.subs-button {
    width: 100px;
    border: none;
    background-color: transparent;
    font-size: 1em;
    font-family: "Roboto";
    color: #388087;
    cursor: pointer;
    transition: color 0.2s ease-in-out;
}

.subs-button:hover {
    color: #e1a278;
}

.checkmark {
    color: transparent;
    transition: none;
    cursor: default;
    font-size: 0;
}
.checkmark:visited {
    color: #e1a278;
    font-size: 1.6em;
}

@media screen and (max-width: 1000px) {
    #content {
        width: 80%;
        min-width: 500px;
    }

    img {
        max-width: 60%;
    }
}

